--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   
   <groupId>com.symphony.oss</groupId>
   <artifactId>oss-parent-pom</artifactId>
-		<version>0.0.7</version>
+		<version>0.0.8-SNAPSHOT</version>
   <packaging>pom</packaging>
   
   <name>oss-home</name>
@@ -70,9 +70,6 @@
         https://oss.sonatype.org/content/repositories/snapshots/
       </distMgmtSnapshotsUrl>
       <release.goals>deploy</release.goals>
-<!--       <organization.logo>
-        http://symphony.foundation/images/SymphonySoftwareFoundation.png
-      </organization.logo> -->
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
       <maven.compiler.source>1.8</maven.compiler.source>
@@ -91,8 +88,8 @@
     <jetty.version>9.4.19.v20190610</jetty.version>
     <mortbay.alpm.version>8.1.11.v20170118</mortbay.alpm.version>
     
-    <jackson.version>2.9.9</jackson.version>
-    <jackson-databind.version>2.9.9.2</jackson-databind.version>
+    <jackson.version>2.10.3</jackson.version>
+    <jackson-databind.version>2.9.10.4</jackson-databind.version>
 
     <commons.codec.version>1.10</commons.codec.version>
 
