--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   
   <groupId>com.symphony.oss</groupId>
   <artifactId>oss-parent-pom</artifactId>
-		<version>0.2.0</version>
+		<version>0.2.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   
   <name>oss-home</name>
@@ -39,7 +39,7 @@
     <connection>scm:git:git://github.com/SymphonyOSF/oss-home.git</connection>
     <developerConnection>scm:git:git@github.com:SymphonyOSF/oss-home.git</developerConnection>
     <url>https://github.com/SymphonyOSF/oss-home</url>
-    <tag>oss-parent-pom-0.2.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <developers>
