--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,6 @@
   </developers>
 
     <properties>
-      <SNYK_ORG_ID>b5496dfe-50c5-4d50-8b68-15fd99172077</SNYK_ORG_ID>
       <distMgmtReleaseName>
         Symphony Release Distribution Repository
       </distMgmtReleaseName>
@@ -1106,9 +1105,9 @@
             </execution>
 	        </executions>
 	        <configuration>
-	            <apiToken>${SNYK_API_TOKEN}</apiToken>
+	            <apiToken>${snyk.api.token}</apiToken>
 	            <failOnSeverity>medium</failOnSeverity>
-	            <org>${SNYK_ORG_ID}</org>
+	            <org>${snyk.org.id}</org>
 	        </configuration>
         </plugin>
       </plugins>
