--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-XX_theme: jekyll-theme-minimal
-remote_theme: pmarsceill/just-the-docs
+theme: jekyll-theme-minimal
+XX_remote_theme: pmarsceill/just-the-docs
 color_scheme: nil
 url: "https://oss.symphony.com"
