--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,3 +2,5 @@ XX_theme: jekyll-theme-minimal
 remote_theme: pmarsceill/just-the-docs
 color_scheme: nil
 url: "https://oss.symphony.com"
+# Set a path/url to a logo that will be displayed instead of the title
+#logo: "/assets/images/logo.png"
