--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   
   <groupId>com.symphony.oss</groupId>
   <artifactId>oss-parent-pom</artifactId>
-		<version>0.4.8-SNAPSHOT</version>
+		<version>0.4.8</version>
   <packaging>pom</packaging>
   
   <name>oss-home</name>
